adjust video height for mobile & tablet (fix for tablet, growing for mobile), add black bkgrd for video, remove scroll bar that is showing on tablet comment form without anything entered

--- a/src/components/CommentsArea.scss
+++ b/src/components/CommentsArea.scss
@@ -73,6 +73,8 @@
         min-height: 1px;
         height: 2.55rem;
         flex-grow: 1;
+
+        overflow: hidden;
       }
 
       &::placeholder {
